# strapdown-rs

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EKF_USAGE.md  GEOPHYSICAL_CONFIG_CHANGES.md  GITHUB_PAGES_SETUP.md  LICENSE  MCAP_USAGE.md  PROJECT_SUMMARY.md  RBPF.md  README.md  TEST_PLOTS_README.md  main.c  notes.ipynb  out  paper.bib  paper.md  pf-spec.md  pixi.toml  pyproject.toml  spec.md  test_geo_config_wizard.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: style.instructions.md
.github/prompts/: addtests.prompt.md  builddocs.prompt.md  check.prompt.md  document.prompt.md
.github/workflows/: copilot-setup-steps.yml  deploy-book.yml  draft-pdf.yml  publish.yml  rust.yml
analysis/: README.md  pyproject.toml
analysis/src/analysis/: __init__.py  create_dataset.py  get_maps.py  plotting.py  preprocess.py
book/: EKF_GEONAV.md  QUICK_REFERENCE.md  RBPF.md  book.toml  custom.css
book/src/: SUMMARY.md  create_placeholders.sh  faq.md  introduction.md  quick-start.md
book/src/api/: earth.md  geonav.md  kalman.md  measurements.md  particles.md  sim-binary.md  sim.md
book/src/development/: building.md
book/src/examples/: tutorial-basic.md  tutorial-gps-degradation.md  tutorial-particle-filter.md
book/src/filters/: comparison.md  ekf.md  measurements.md  particle-filter.md  rbpf.md  ukf.md
book/src/geonav/: data-sources.md  gravity.md  magnetic.md  overview.md
book/src/gnss/: corruption.md  dropouts.md  fault-simulation.md  reduced-rates.md
book/src/installation/: building.md  crates-io.md  installation.md  requirements.md
book/src/user-guide/: closed-loop.md  coordinate-frames.md  data-format.md  open-loop.md  overview.md  particle-filter.md  strapdown-mechanization.md
conf/: ekf_both.toml  ekf_degraded.toml  ekf_grav.toml  ekf_mag.toml  ekf_truth.toml  geonav_example.toml  rbpf_both.toml  rbpf_degraded.toml  rbpf_grav.toml  rbpf_mag.toml  rbpf_truth.toml  ukf_both.toml  ukf_degraded.toml  ukf_grav.toml  ukf_mag.toml  ukf_truth.toml  ukf_truth_with_plot.toml
core/: Cargo.toml  README.md  closed_loop.csv  dead-reckoning.csv  dead_reckoning.csv  ins.csv  navigation_result.csv  navigation_results.csv  new_notes.ipynb  northward_motion.csv  notes.ipynb  results.mcap  subset_data.csv
core/data/: 2023-08-09_124742.csv  2023-08-09_163741.csv  2025-03-01_150426.csv  2025-06-08.csv
core/src/: earth.rs  filter.rs  kalman.rs  lib.rs  linalg.rs  linearize.rs  main.rs  measurements.rs  messages.rs  particle.rs  rbpf.rs  sim.rs  strapdown.rs  velocity_particle.rs
core/tests/: integration_tests.rs  test_data.csv  velocity_particle_integration_tests.rs  velocity_particle_tests.rs
data/: ReadMe.md
data/input/: 2023-08-04_214758  2023-08-06_144805  2023-08-09_124742  2023-08-09_124742.csv  2023-08-09_16-37-41.csv  2023-08-09_163741  2024-06-20_165550  2025-03-01_15-04-26.csv  2025-03-01_150426  2025-03-01_164639.csv  2025-06-11_20-34-24  2025-06-11_20-34-24.csv  2025-06-14_21-17-02  2025-06-14_21-17-02.csv  2025-06-18_15-09-25  2025-06-18_15-09-25.csv  2025-06-18_16-52-32  2025-06-27_11-54-35  2025-07-04_17-24-46  2025-07-04_17-24-46.csv  2025-07-08_14-12-53  2025-07-08_14-12-53.csv  2025-07-11_13-33-16.csv  2025-07-18_23-13-43  2025-07-18_23-13-43.csv  2025-07-31_23-36-03  2025-08-03_18-15-59  2025-09-26_19-03-38  2025-09-27_12-54-35  2025-09-27_18-10-16  2025-09-27_18-10-16.csv  2025-09-28_20-23-16  2025-11-09_17-34-01  2025-11-16_16-08-14
data/output/: 2023-08-09_163741.csv
data/output/ekf/degraded/: 2023-08-09_124742.csv  2023-08-09_163741.csv  2025-03-01_150426.csv  2025-03-01_164639.csv  2025-06-11_20-34-24.csv  2025-06-14_21-17-02.csv  2025-06-18_15-09-25.csv  2025-07-04_17-24-46.csv  2025-07-18_23-13-43.csv  2025-09-27_18-10-16.csv
data/output/ekf/truth/: 2023-08-09_124742.csv  2023-08-09_163741.csv  2025-03-01_150426.csv  2025-03-01_164639.csv  2025-06-11_20-34-24.csv  2025-06-14_21-17-02.csv  2025-06-18_15-09-25.csv  2025-07-04_17-24-46.csv  2025-07-08_14-12-53.csv  2025-07-18_23-13-43.csv  2025-09-27_18-10-16.csv
data/output/ukf/degraded/: 2023-08-09_124742.csv  (+9 more)
docs/: GEOPHYSICAL_CONFIG.md  INTEGRATION_TESTS.md  LOGGING.md  LOGGING_IMPLEMENTATION.md  PARTICLE_FILTER_DESIGN.md  USER_GUIDE.md  data.md
examples/: magnetometer-config.json  magnetometer-config.yaml  velocity_particle_integration.rs
examples/configs/: README.md  baseline.yaml  closed-loop-ukf.toml  combo.yaml  combo_duty_hijack.yaml  degraded_5s.yaml  degraded_fullrate.yaml  duty_10on_2off.yaml  extended_gnss_denied.yaml  gnss_degradation.json  gnss_degradation.toml  gnss_degradation.yaml  hijack.yaml  parallel_example.toml  particle_filter_comparison.yaml  sched_10s.yaml  simple_dropout.yaml  slowbias.yaml  slowbias_rot.yaml
examples/configs/json/: baseline.json  combo.json  combo_duty_hijack.json  degraded_5s.json  degraded_fullrate.json  duty_10on_2off.json  hijack.json  sched_10s.json  slowbias.json  slowbias_rot.json
examples/geonav-sim/: geonav-sim.ipynb
examples/strapdown-sim/: strapdown-sim.html  strapdown-sim.ipynb
geonav/: Cargo.toml  INTEGRATION_GUIDE.md  README.md  VELOCITY_PARTICLE_FILTER.md
geonav/src/: lib.rs  main.rs  velocity_particle.rs
libstrapdown/: Cargo.toml
libstrapdown/src/: lib.rs
papers/anomaly_ukf/: generate_figures.py  geonav-ukf.bcf  geonav-ukf.run.xml  geonav-ukf.tex  ion-itm-abstract.md  presentation.nav  presentation.run.xml  presentation.tex  references.bib
papers/data_paper/: mems-nav-data.tex  references.bib
papers/joss/: paper.bib  paper.md
pf/: README.md  pyproject.toml
pf/src/pf/: __init__.py  cli.py  geopf.py  postprocess.py
scripts/: analyze_results.py  create_dataset.py  degraded.py  get_maps.py  plot.py  preprocess.py  truth.py
sim/: Cargo.toml
sim/src/: common.rs  lib.rs  main.rs  plotting.rs
strapdown-py/: Cargo.toml  pyproject.toml
strapdown-py/src/: lib.rs
strapdown_c/: Cargo.toml  cbindgen.toml  strapdown.h
strapdown_c/src/: lib.rs
strapdown_py/: Cargo.toml  pyproject.toml
strapdown_py/src/: lib.rs
strapdown_py/tests/: test_strapdown.py
(+15 files in other folders)
