[workspace]
members = [
    "core",
    #"strapdown_c",  <-- Future C bindings
    #"strapdown_py", <-- Future Python bindings
    "sim",
    "geonav"
]
resolver = "3"

[profile.test]
inherits = "release"

[workspace.metadata.book]
title = "Strapdown-rs Documentation"
authors = ["James Brodovsky"]
description = "A Rust library for strapdown inertial navigation systems"
language = "en"
src = "book/src"