[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Brodovsky", email = "james.brodovsky@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "haversine>=2.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pygmt>=0.17.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
