[package]
name = "strapdown-rs"
authors = ["James Brodovsky"]
version = "0.3.6"
edition = "2024"
description = "A toolbox for building and analyzing strapdown inertial navigation systems."
license = "MIT"
readme = "README.md"
homepage = "https://www.strapdown.rs"
repository = "https://github.com/jbrodovsky/strapdown-rs"
keywords = ["strapdown", "inertial", "navigation", "IMU", "INS"]
#categories = ["navigation", "robotics", "aerospace", "engineering"]
documentation = "https://docs.rs/strapdown-rs/"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[[bin]]
name = "strapdown"
path = "src/main.rs"

[lib]
name = "strapdown"
path = "src/strapdown.rs"

[dependencies]
angle = "0.5.0"
chrono = {version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
nalgebra = "0.33.2"
nav-types = "0.5.2"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
world_magnetic_model = "0.4.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"

