[package]
name = "strapdown-core"
authors = ["James Brodovsky"]
version = "0.5.0"
edition = "2024"
description = "A toolbox for building and analyzing strapdown inertial navigation systems as well as simulating various scenarios of GNSS signal degradation."
license = "MIT"
readme = "README.md"
homepage = "https://www.strapdown.rs"
repository = "https://github.com/jbrodovsky/strapdown-rs"
keywords = ["strapdown", "inertial", "navigation", "IMU", "INS"]
#categories = ["navigation", "robotics", "aerospace", "engineering"]
documentation = "https://docs.rs/strapdown-rs/"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[lib]
name = "strapdown"
path = "src/lib.rs"

[features]
default = []
clap = ["dep:clap"]

[dependencies]
angle = "0.5.0"
chrono = {version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
nalgebra = "*"
nav-types = "0.5.2"
rand = "0.9.1"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
world_magnetic_model = "0.4.0"
anyhow = "1.0.99"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
clap = { version = "4.0", features = ["derive"], optional = true }
log = "0.4"
mcap = "0.23"
memmap2 = "0.9"
rmp-serde = "1.3"

[dev-dependencies]
assert_approx_eq = "1.1.0"
tempfile = "3.5"

[profile.test]
inherits = "release"
