[package]
authors = ["James Brodovsky"]
name = "strapdown-sim"
version = "0.1.0"
edition = "2024"
description = "Strapdown inertial navigation system simulation tool"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
strapdown-core = { path = "../core", features = ["clap"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
nalgebra = "0.34.1"
rayon = "1.10"
plotters = "0.3.7"

[[bin]]
name = "strapdown-sim"
path = "src/main.rs"
